--- a/src/styles/cleared.scss
+++ b/src/styles/cleared.scss
@@ -5,7 +5,6 @@
   line-height: 1.3rem;
   margin-top: 0.25rem;
   text-align: center;
-  font-size: 1.15em;
   border-radius: 6px;
 
   background-color: transparentize($light-gray, 0.3);
